--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,15 @@
 #title {
-  background-color: #d87f8c;
+  background-color: #f84560;
 }
 
 h1 {
   font-family: 'Montserrat', sans-serif;
   font-size: 3rem;
   line-height: 1.5;
+}
+
+.container-fluid {
+  padding: 3% 5%;
 }
 
 
