--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,53 @@
-#title {
-  background-color: #f84560;
+body{
+  font-family: 'Montserrat';
 }
 
-h1 {
-  font-family: 'Montserrat', sans-serif;
-  font-size: 3rem;
-  line-height: 1.5;
+#title {
+  background-color: #6062f3;
+  color: #fff;
 }
 
 .container-fluid {
   padding: 2% 5%;
 }
 
+h1 {
+  font-family: 'Montserrat';
+  font-size: 3rem;
+  line-height: 1.5;
+}
 
+/* Navigation Bar */
+
+.navbar {
+  padding: 0 0 4.5rem;
+}
+
+.navbar-brand {
+  font-family: 'Montserrat';
+  font-size: 100px;
+  font-weight: bold;
+}
+
+.nav-item{
+  padding: 0 18px;
+}
+
+.nav-link{
+  font-size: 1.2rem;
+  font-weight: bold;
+  font-family: 'Montserrat';
+}
+
+/* Down Load Buttons */
+
+.download-button {
+  margin: 5% 3% 5% 0 ;
+}
+
+/* Title Image */
+
+.title-image {
+  width: 40%;
+  transform: rotate(25deg);
+}
