--- a/css/styles.css
+++ b/css/styles.css
@@ -3,18 +3,27 @@ body{
 }
 
 #title {
-  background-color: #6062f3;
+  background-color:  #f360aa;
   color: #fff;
 }
 
 .container-fluid {
-  padding: 2% 5%;
+  padding: 3% 15%;
 }
 
 h1 {
   font-family: 'Montserrat';
   font-size: 3rem;
   line-height: 1.5;
+}
+
+h3 {
+  font-family: 'Montserrat';
+  font-size: 1.5rem;
+}
+
+p {
+  color: #8f8f8f;
 }
 
 /* Navigation Bar */
@@ -25,7 +34,7 @@ h1 {
 
 .navbar-brand {
   font-family: 'Montserrat';
-  font-size: 100px;
+  font-size: 2.5rem;
   font-weight: bold;
 }
 
@@ -50,4 +59,23 @@ h1 {
 .title-image {
   width: 40%;
   transform: rotate(25deg);
+}
+
+/* Feature */
+
+#features {
+  padding: 7% 15%;
+}
+
+.feature-box {
+  text-align: center;
+}
+
+.icon {
+  color: #f360aa;
+  margin-bottom: 1.5rem;
+}
+
+.icon:hover {
+  color:  #f5b8d6;
 }
