--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,12 @@ h1 {
   line-height: 1.5;
 }
 
+h2 {
+  font-family: 'Montserrat';
+  font-size: 3rem;
+  line-height: 1.5;
+}
+
 h3 {
   font-family: 'Montserrat';
   font-size: 1.5rem;
@@ -78,4 +84,29 @@ p {
 
 .icon:hover {
   color:  #f5b8d6;
+}
+
+/* Testimonial Section */
+
+#testimonials {
+  padding: 7% 15%;
+  text-align: center;
+  background-color:  #f360aa;
+  color: white;
+}
+
+.testimonial-image {
+  width: 10%;
+  border-radius: 100%;
+  margin: 20px;
+}
+
+#press {
+  background-color:  #f360aa;
+  text-align: center;
+}
+
+.press-logo {
+  width: 15%;
+  margin: 20px 20px 50px 
 }
