--- a/css/styles.css
+++ b/css/styles.css
@@ -7,24 +7,24 @@ body {
   color: #fff;
 }
 
-.container-fluid {
+.container {
   padding: 3% 15%;
 }
 
 h1 {
-  font-family: 'Montserrat';
+  font-family: 'Montserrat', sans-serif;
   font-size: 3rem;
   line-height: 1.5;
 }
 
 h2 {
-  font-family: 'Montserrat';
+  font-family: 'Montserrat', sans-serif;
   font-size: 3rem;
   line-height: 1.5;
 }
 
 h3 {
-  font-family: 'Montserrat';
+  font-family: 'Montserrat', sans-serif;
   font-size: 1.5rem;
 }
 
@@ -39,7 +39,8 @@ p {
 }
 
 .navbar-brand {
-  font-family: 'Montserrat';
+
+  font-family: 'Ubuntu', sans-serif;
   font-size: 2.5rem;
   font-weight: bold;
 }
@@ -51,7 +52,8 @@ p {
 .nav-link {
   font-size: 1.2rem;
   font-weight: bold;
-  font-family: 'Montserrat';
+  font-family: 'Montserrat', sans-serif;
+
 }
 
 /* Down Load Buttons */
@@ -63,7 +65,7 @@ p {
 /* Title Image */
 
 .title-image {
-  width: 40%;
+  width: 50%;
   transform: rotate(25deg);
 }
 
