--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ body {
 }
 
 .container {
-  padding: 3% 15%;
+  padding: 3% 10%;
 }
 
 h1 {
@@ -91,7 +91,7 @@ p {
 /* Testimonial Section */
 
 #testimonials {
-
+  padding: 0% 15%;
   text-align: center;
   background-color: #f360aa;
   color: white;
@@ -115,4 +115,20 @@ p {
 .press-logo {
   width: 15%;
   margin: 20px 20px 50px
+}
+
+/* Pricing Section */
+
+#pricing {
+  padding: 80px;
+  text-align: center;
+}
+
+.pricing-column {
+  padding: 3% 2%;
+  text-align: center;
+}
+
+.btn_1{
+  margin-top: 56px;
 }
