--- a/css/styles.css
+++ b/css/styles.css
@@ -5,10 +5,11 @@ body {
 #title {
   background-color: #f360aa;
   color: #fff;
+  height: 550px;
 }
 
 .container {
-  padding: 3% 10%;
+  padding: 3% 10% 7%;
 }
 
 h1 {
@@ -65,23 +66,30 @@ p {
 /* Title Image */
 
 .title-image {
-  width: 50%;
+  width: 60%;
   transform: rotate(25deg);
+  position: absolute;
+  right: 30%;
 }
 
 /* Feature */
 
 #features {
   padding: 7% 15%;
+  background-color: yellow;
+  position: relative;
+  z-index: 1;
+
 }
 
 .feature-box {
   text-align: center;
+  padding: 4.5%;
 }
 
 .icon {
   color: #f360aa;
-  margin-bottom: 1.5rem;
+  margin-bottom: 1rem;
 }
 
 .icon:hover {
